--- a/config.yml
+++ b/config.yml
@@ -28,7 +28,7 @@ booktitle: Entrepreneurs, be ambitious.
 # 著者名。「, 」で区切って複数指定できる
 # 読みを入れる例 aut: [{name: "青木峰郎", file-as: "アオキミネロウ"}, {name: "武藤健志", file-as: "ムトウケンシ"}, {name: "高橋征義", file-as: "タカハシマサヨシ"}, {name: "角征典", file-as: "カドマサノリ"}]
 # aut: ["青木峰郎", "武藤健志", "高橋征義", "角征典"]
-aut: ["辻幸喜"]
+aut: ["辻幸喜 (@kouki_tsuji)"]
 
 # 以下はオプション
 # 以下はオプション(autと同じように配列書式で複数指定可能)。
@@ -49,6 +49,7 @@ aut: ["辻幸喜"]
 # a-cmm, cmm: 解釈・分析・考察者
 # a-csl, csl: 監修者
 # a-dsr, dsr: デザイナ
+dsr: 山口さん (@XXX)
 # a-edt, edt: 編集者
 # a-ill, ill: イラストレータ
 # a-lyr, lyr: 歌詞作成者
@@ -59,6 +60,7 @@ aut: ["辻幸喜"]
 # a-pht, pht: 撮影責任者
 # a-pbl, pbl: 出版社（発行所）
 # a-prt, prt: 印刷所
+prt: ねこのしっぽ
 # a-red, red: 項目の枠組起草者
 # a-rev, rev: 評論者
 # a-spn, spn: 援助者
@@ -77,7 +79,7 @@ date: 2020-03-01
 history: [["2020-03-01"]]
 # 権利表記(配列で複数指定可)
 # rights: (C) 2016-2019 Re:VIEW Developers
-rights: (C) 辻幸喜
+rights: (C) 2020 辻幸喜 (@kouki_tsuji)
 # description: 説明
 # subject: 短い説明用タグ(配列で複数指定可)
 # type: 書籍のカテゴリーなど(配列で複数指定可)
@@ -144,6 +146,7 @@ titlepage: false
 
 # 奥付を作成するか。デフォルトでは作成されない。trueを指定するとデフォルトの奥付、ファイル名を指定するとそれがcolophon.htmlとしてコピーされる
 # colophon: null
+colophon: true
 
 # 裏表紙データファイル (PDFMaker向けにはLaTeXソース断片、EPUBMaker向けにはHTMLファイル)
 # backcover: null
@@ -319,7 +322,7 @@ epubmaker:
   # externallink: true
   #
   # 脚注に「戻る」リンクを追加する(trueで追加)。脚注の記号および戻るリンクの記号はlocale.ymlで変更可能
-  # back_footnote: null
+  # back_footnote: nullfff
   # epubmaker:階層を使うものはここまで
 
 # LaTeX用のスタイルファイル(styディレクトリ以下に置くこと)
