--- a/config.yml
+++ b/config.yml
@@ -336,8 +336,8 @@ texstyle: ["reviewmacro"]
 # LaTeX用のdocumentclassを指定する
 # オプションについてはsty/README.mdを参照
 # デフォルトは印刷用。電子配布版を作るには media=ebook とする
-texdocumentclass: ["review-jsbook", "media=print,paper=b5,line_length=40zw,number_of_lines=36,serial_pagination=true,hiddenfolio=nikko-pc"]
-# texdocumentclass: ["review-jsbook", "media=ebook,paper=b5,line_length=40zw,number_of_lines=36,serial_pagination=true,hiddenfolio=nikko-pc"]
+# texdocumentclass: ["review-jsbook", "media=print,paper=b5,line_length=40zw,number_of_lines=36,serial_pagination=true,hiddenfolio=nikko-pc"]
+texdocumentclass: ["review-jsbook", "media=ebook,paper=b5,line_length=40zw,number_of_lines=36,serial_pagination=true,hiddenfolio=nikko-pc"]
 #
 # LaTeX用のコマンドを指定する
 # texcommand: "uplatex"
