--- a/config.yml
+++ b/config.yml
@@ -270,8 +270,8 @@ epubmaker:
   #
   # NCX目次の見出しレベルごとの飾り(配列で設定)。EPUB3ではNCXは作られない
   # ncxindent:
-  #- 
-  #- - 
+  #-
+  #- -
   # フックは、各段階で介入したいときのプログラムを指定する。自動で適切な引数が渡される
   # プログラムには実行権限が必要
   # ファイル変換処理の前に実行するプログラム。スタイルシートのコンパイルをしたいときなどに利用する。
@@ -332,6 +332,7 @@ epubmaker:
 
 # LaTeX用のスタイルファイル(styディレクトリ以下に置くこと)
 texstyle: ["reviewmacro"]
+#texstyle: techbooster-doujin
 #
 # LaTeX用のdocumentclassを指定する
 # オプションについてはsty/README.mdを参照
