--- a/config.yml
+++ b/config.yml
@@ -136,8 +136,8 @@ toc: true
 coverimage: cover.jpg
 #
 # 表紙の後に大扉ページを作成するか。省略した場合はtrue (作成する)
-# titlepage: true
-titlepage: false
+titlepage: true
+# titlepage: false
 #
 # 自動生成される大扉ページを上書きするファイル。ファイル名を指定すると大扉として入る (PDFMaker向けにはLaTeXソース断片、EPUBMaker向けにはHTMLファイル)
 # titlefile: null
@@ -337,8 +337,8 @@ texstyle: ["reviewmacro"]
 # LaTeX用のdocumentclassを指定する
 # オプションについてはsty/README.mdを参照
 # デフォルトは印刷用。電子配布版を作るには media=ebook とする
-# texdocumentclass: ["review-jsbook", "media=print,paper=b5,line_length=40zw,number_of_lines=36,serial_pagination=true,hiddenfolio=nikko-pc"]
-texdocumentclass: ["review-jsbook", "media=ebook,paper=b5,line_length=40zw,number_of_lines=36,serial_pagination=true,hiddenfolio=nikko-pc"]
+texdocumentclass: ["review-jsbook", "media=print,paper=b5,line_length=40zw,number_of_lines=36,serial_pagination=true,hiddenfolio=nikko-pc,startpage=2"]
+# texdocumentclass: ["review-jsbook", "media=ebook,paper=b5,line_length=40zw,number_of_lines=36,serial_pagination=true,hiddenfolio=nikko-pc"]
 #
 # LaTeX用のコマンドを指定する
 # texcommand: "uplatex"
