--- a/catalog.yml
+++ b/catalog.yml
@@ -2,7 +2,7 @@ PREDEF:
   - preface.re
 
 CHAPS:
-  - introduction.re
+#  - introduction.re
   - africa.re
   - femtech.re
   - jpceo.re
@@ -11,4 +11,3 @@ APPENDIX:
 
 POSTDEF:
   - afterword.re
-
