--- a/config.yml
+++ b/config.yml
@@ -60,7 +60,7 @@ dsr: ヤマグチナナコ / @nnk0107 (Instagram)
 # a-pht, pht: 撮影責任者
 # a-pbl, pbl: 出版社（発行所）
 # a-prt, prt: 印刷所
-prt: ねこのしっぽ
+prt: 製本直送.com
 # a-red, red: 項目の枠組起草者
 # a-rev, rev: 評論者
 # a-spn, spn: 援助者
@@ -76,7 +76,7 @@ date: 2020-03-01
 # [["初版第1刷の日付", "初版第2刷の日付"], ["第2版第1刷の日付"]]
 # 日付の後ろを空白文字で区切り、任意の文字列を置くことも可能。
 # history: [["2020-01-26"]]
-history: [["2020-03-01"]]
+history: [["2020-03-01"], ["2020-05-21"]]
 # 権利表記(配列で複数指定可)
 # rights: (C) 2016-2019 Re:VIEW Developers
 rights: (C) 2020 辻幸喜 / @kouki_tsuji (Twitter)
@@ -122,7 +122,8 @@ toclevel: 2
 secnolevel: 2
 
 # 本文中に目次ページを作成するか。省略した場合はnull (作成しない)
-toc: true
+# toc: true
+toc: null
 
 # EPUB2標準の目次(NCX)以外に物理目次ファイルを作成するか。省略した場合はnull (作成しない)
 # ePUB3においてはこの設定によらず必ず作成される
@@ -134,7 +135,8 @@ toc: true
 # 表紙に配置し、書籍の影絵にも利用する画像ファイル。省略した場合はnull (画像を使わない)。画像ディレクトリ内に置いてもディレクトリ名は不要(例: cover.jpg)
 # PDFMaker 固有の表紙設定は pdfmaker セクション内で上書き可能
 # coverimage: cover.jpg
-coverimage: omote.png
+#coverimage: omote.png
+coverimage: null
 #
 # 表紙の後に大扉ページを作成するか。省略した場合はtrue (作成する)
 # titlepage: true
@@ -154,8 +156,8 @@ titlepage: false
 colophon: true
 
 # 裏表紙データファイル (PDFMaker向けにはLaTeXソース断片、EPUBMaker向けにはHTMLファイル)
-# backcover: null
-backcover: backcover.tex
+backcover: null
+#backcover: backcover.tex
 
 # プロフィールページファイル  (PDFMaker向けにはLaTeXソース断片、EPUBMaker向けにはHTMLファイル)。ファイル名を指定すると著者紹介として入る
 # profile: null
@@ -339,8 +341,9 @@ texstyle: ["reviewmacro"]
 # LaTeX用のdocumentclassを指定する
 # オプションについてはsty/README.mdを参照
 # デフォルトは印刷用。電子配布版を作るには media=ebook とする
-# texdocumentclass: ["review-jsbook", "media=print,paper=b5,line_length=40zw,number_of_lines=36,serial_pagination=true,hiddenfolio=nikko-pc,startpage=2"]
-texdocumentclass: ["review-jsbook", "media=ebook,paper=b5,line_length=40zw,number_of_lines=36,serial_pagination=true,hiddenfolio=nikko-pc"]
+#texdocumentclass: ["review-jsbook", "media=print,paper=b5,line_length=40zw,number_of_lines=36,serial_pagination=true,hiddenfolio=nikko-pc"]
+#texdocumentclass: ["review-jsbook", "media=ebook,paper=b5,line_length=40zw,number_of_lines=36,serial_pagination=true,openany"]
+texdocumentclass: ["review-jsbook", "media=ebook,paper=b5,line_length=40zw,number_of_lines=36,openany"]
 #
 # LaTeX用のコマンドを指定する
 # texcommand: "uplatex"
