--- a/config.yml
+++ b/config.yml
@@ -60,7 +60,7 @@ dsr: ヤマグチナナコ / @nnk0107 (Instagram)
 # a-pht, pht: 撮影責任者
 # a-pbl, pbl: 出版社（発行所）
 # a-prt, prt: 印刷所
-prt: ねこのしっぽ
+prt: 製本直送.com
 # a-red, red: 項目の枠組起草者
 # a-rev, rev: 評論者
 # a-spn, spn: 援助者
@@ -76,7 +76,7 @@ date: 2020-03-01
 # [["初版第1刷の日付", "初版第2刷の日付"], ["第2版第1刷の日付"]]
 # 日付の後ろを空白文字で区切り、任意の文字列を置くことも可能。
 # history: [["2020-01-26"]]
-history: [["2020-03-01"]]
+history: [["2020-03-01"], ["2020-05-21"]]
 # 権利表記(配列で複数指定可)
 # rights: (C) 2016-2019 Re:VIEW Developers
 rights: (C) 2020 辻幸喜 / @kouki_tsuji (Twitter)
